# mercurial-dynamic-amm-sdk

./: Anchor.toml  Cargo.toml
dynamic-amm-quote/: Cargo.toml
programs/dynamic-amm/: Cargo.toml
programs/dynamic-vault/: Cargo.toml
rust-client/: Cargo.toml
rust-client/src/: rpc.rs
rust-client/src/instructions/dynamic_amm/: create_pool.rs  deposit.rs  swap.rs  withdraw.rs
