[package]
name = "dynamic-amm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[features]
default = ["cpi"]
no-entrypoint = []
cpi = ["no-entrypoint"]
localnet = []
staging = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[lib]
crate-type = ["cdylib", "lib"]
name = "dynamic_amm"

[dependencies]
anchor-lang = { git = "https://github.com/bridgesplit/anchor", features = ["event-cpi"] }
anchor-spl = "0.30.1"