[package]
name = "dynamic-vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[features]
default = ["cpi"]
no-entrypoint = []
cpi = ["no-entrypoint"]
no-idl = []
localnet = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[lib]
crate-type = ["cdylib", "lib"]
name = "dynamic_vault"

[dependencies]
anchor-lang = { version="0.30.1", features = ["event-cpi"] }
anchor-spl = "0.30.1"