[package]
name = "dynamic-vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]
no-idl = []
localnet = []

[lib]
crate-type = ["cdylib", "lib"]
name = "dynamic_vault"

[dependencies]
anchor-lang = { git = "https://github.com/bridgesplit/anchor", features = ["event-cpi"] }
anchor-spl = "0.30.1"